fix rounded corner background bleed

--- a/src/styles/bipsi-style.css
+++ b/src/styles/bipsi-style.css
@@ -138,7 +138,6 @@ label.toggle {
     white-space: nowrap;
     border: none;
     border-radius: 1em;
-    background-color: var(--button-color);
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -158,6 +157,8 @@ label.toggle {
 
     position: absolute;
     width: 100%; height: 100%;
+
+    background-color: var(--button-color);
 }
 
 .toggle input + svg {
@@ -467,39 +468,6 @@ select {
 
 #field-tile-editor {
     height: 192px;
-}
-
-#field-tile-select {
-    padding: .5rem;
-
-    display: flex; flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5px;
-    justify-content: flex-start;
-
-    border-radius: .5rem;
-    background: var(--trans-gradient);
-    overflow: hidden scroll;
-
-    width: 100%;
-    height: 100%;
-}
-
-#field-tile-select label {
-    min-height: unset;
-
-    width: 40px; height: 40px;
-
-    background-color: var(--tileset-background-color);
-    background-image: var(--tileset-background-image);
-    background-size: var(--tileset-background-size);
-}
-
-#field-tile-select input[type="radio"]:checked {
-    background: none;
-    z-index: 5;
-
-    box-shadow: 0 0 0 5px white;
 }
 
 #play-tab-view canvas {
