--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -70,35 +70,6 @@ svg {
 
 #tile-select {
     flex: 1;
-
-    padding: .5rem;
-
-    display: flex; flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5px;
-    justify-content: flex-start;
-    align-content: flex-start;
-
-    border-radius: .5rem;
-    background: var(--trans-gradient);
-    overflow: hidden scroll;
-}
-
-#tile-select label {
-    min-height: unset;
-
-    width: 40px; height: 40px;
-
-    background-color: var(--tileset-background-color);
-    background-image: var(--tileset-background-image);
-    background-size: var(--tileset-background-size);
-}
-
-#tile-select input[type="radio"]:checked {
-    background: none;
-    z-index: 5;
-
-    box-shadow: 0 0 0 5px white;
 }
 
 #room-select-tab {
@@ -390,9 +361,6 @@ label.room-picker-toggle {
     border-radius: .5rem;
     background: var(--trans-gradient);
     overflow: hidden scroll;
-
-    width: 100%;
-    height: 100%;
 }
 
 .tile-select label {
@@ -410,6 +378,18 @@ label.room-picker-toggle {
     z-index: 5;
 
     box-shadow: 0 0 0 5px white;
+}
+
+.tile-select label > input {
+    background: none;
+}
+
+.room-select label > input {
+    background: none;
+}
+
+#color-select label > input {
+    background: none;
 }
 
 .controls-tab {
